<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NovoCompromisso">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            app:titleTextColor="@color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/title_activity_novo_compromisso" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/app_bar">

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/txt_title" />
        <EditText
            android:id="@+id/edit_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_titulo" />


        <TextView
            android:id="@+id/txt_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_titulo"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/txt_descricao" />
        <EditText
            android:id="@+id/edit_descricao"
            android:ems="10"
            android:gravity="start|top"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_below="@id/txt_descricao"/>



        <TextView
            android:id="@+id/txt_data2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_descricao"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/txt_data" />
        <EditText
            android:id="@+id/edit_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_data2" />




        <TextView
            android:id="@+id/txt_hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_data"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/txt_hora" />
        <EditText
            android:id="@+id/edit_hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_hora" />


        <Button
            android:id="@+id/btn_confirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_hora"
            android:text="@string/btn_confirmar" />
    </RelativeLayout>
</RelativeLayout>